# tools_tde

./: Calc_checksums.py  Calc_checksums_linux.py  Code_Blocks_How_config_free_compilers_windows_11.txt  Comparaison_comp_dll.ods  Comparaison_comp_dll.xls  Copy_include_file_glext.bat  DateTime.bat  DateTime.sh  How config Borland C_C++ compiler (32 bits only) into CodeBlocks.md  How config Borland C_C++ into CB on windows 64bit.readme  How config CB MinGW64 GCC C_C++ compiler into CodeBlocks.md  How config CB MinGW64 into CB on windows 64bit.readme  How config CLANG Compiler (32 and 64 bits) (into MSYS2) into CodeBlocks.md  How config CLANG Compiler (32 and 64 bits) (into package WinLibs) into CodeBlocks.md  How config CLANG Compiler (32 and 64 bits) (with MSVC) into CodeBlocks.md  How config CLANG Compiler into CB (+ MSVC) on windows 64bit.readme  How config CLANG Compiler into CB (+ MSYS2) on windows 64bit.readme  How config CLANG Compiler into CB (+ Winlibs) on windows 64bit.readme  How config CYGWIN64 (+ MinGW32 or MinGW64) into CodeBlocks.md  How config CYGWIN64 (+MinGW32 and MinGW64) into CB on windows 64bit.readme  How config DMC into CB on windows 64bit.readme  How config Digital Mars Compiler C_C++ (32 bits only) into CodeBlocks.md  How config LCC compiler (32 bits and 64 bits) into CodeBlocks.md  How config LCC_LCC64 into CB on windows 64bit.readme  How config MSVC Compiler (32 and 64 bits) into CodeBlocks.md  How config MSVC into CB on windows 64bit.readme  How config MSYS2 MinGW32_MinGW64 GCC C_C++ compiler into CodeBlocks.md  How config MSYS2 MinGW32_MinGW64 into CB on windows 64bits.readme  How config MinGW GCC C_C++ compiler (official version) (32 bits) into CodeBlocks.md  How config MinGW32 into CB on windows 64bit.readme  How config MinGW64 GCC C_C++ compiler into CodeBlocks.md  How config MinGW64 GNU GCC into CB on windows 64bits.readme  How config OneAPI Intel C Compiler, 32 and 64 bits into CodeBlocks.md  How config OneAPI_Intel_compiler into CB on windows 64bit.readme  How config Open WATCOM Compiler C_C++ (32 and 64 bits) into CodeBlocks.md  How config Open WATCOM into CB on windows 64bit.readme  How config PELLESC into CB on windows 64bit.readme  How config Pelles C Compiler (32 and 64 bits) into CodeBlocks.md  How config Red Panda MinGW64 GCC C_C++ compiler into CodeBlocks.md  How config Red Panda MinGW64 into CB on windows 64bit.readme  (+17 more)
Modifs_compilers/Borland/: glut.h  stdbool.h
Modifs_compilers/Pelles C/: glaux.h  glu.h
Modifs_compilers/Watcom/: glu.h
Modifs_compilers/dm/: glu32.lib  opengl32.lib
Modifs_compilers/lcc/: gl.h
build.batch/: Compil_link_Borland_32b_windows.bat  Compil_link_CLANGMW32_32b_windows.bat  Compil_link_CLANGMW64_64b_windows.bat  Compil_link_CLANGW32_32b_windows.bat  Compil_link_CLANGW64_64b_windows.bat  Compil_link_CLANGX32_32b_windows.bat  Compil_link_CLANGX32_32b_windows.bat.bak  Compil_link_CLANGX64_64b_windows.bat  Compil_link_CLANGX64_64b_windows.bat.bak  Compil_link_DEVCPP_64b_windows.bat  Compil_link_MINGW32OF_32b_windows.bat  Compil_link_MINGW32WL_32b_windows.bat  Compil_link_MINGW64CB_64b_windows.bat  Compil_link_MINGW64WL_64b_windows.bat  Compil_link_MSYS2W32_32b_windows.bat  Compil_link_MSYS2W64_64b_windows.bat  Compil_link_OW32_32b_windows.bat  Compil_link_OW64_64b_windows.bat  Compil_link_TDMW32_32b_windows.bat  Compil_link_TDMW64_64b_windows.bat  Compil_link_VS2022X32_32b_windows.bat  Compil_link_VS2022X64_64b_windows.bat  Compil_link_cygwin_32b_windows.bat  Compil_link_cygwin_64b_windows.bat  Compil_link_dmc_32b_windows.bat  Compil_link_lcc32_32b_windows.bat  Compil_link_lcc64_64b_windows.bat  Compil_link_pellesc32_32b_windows.bat  Compil_link_pellesc64_64b_windows.bat
build.batch/build.shell/: Compil_link_CLANG_64b_linux.sh  Compil_link_GCC_32b_linux.sh  generate_all_with_shell_script.sh
build.cmake/BC55/: CMAKELists.txt  makeFile_Borland.mak
build.cmake/CLANGMW32/: CMAKELists.txt
build.cmake/clang64/: CMakeLists.txt
build.cmake/gcc32/: CMakeLists.txt
build.shell/: Compil_link_CLANG_32b_linux.sh  Compil_link_GCC_64b_linux.sh
(+36 files in other folders)
